--- a/Dockerfile.production
+++ b/Dockerfile.production
@@ -6,6 +6,7 @@ COPY ./src /var/www/app/src
 COPY ./package.json /var/www/app/package.json
 COPY ./app.js /var/www/app/app.js
 
+RUN npm install -g nodemon pm2
 RUN npm install
 
 CMD ["npm", "run", "start:prod"]
