--- a/package.json
+++ b/package.json
@@ -36,7 +36,6 @@
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.3",
     "command-line-args": "^5.0.2",
-    "connect-mongo": "^1.3.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
@@ -50,9 +49,7 @@
     "mongoose-paginate-v2": "^1.0.12",
     "node-cron": "^2.0.3",
     "node-env-file": "^0.1.8",
-    "nodemon": "^1.18.3",
     "object-to-xml": "^2.0.0",
-    "pm2": "^3.5.0",
     "simple-express-route-builder": "^0.1.1",
     "socket.io": "^2.2.0",
     "uuid": "^3.3.2",
@@ -63,11 +60,9 @@
     "apidoc": "^0.17.6",
     "assert": "^1.4.1",
     "chai": "^4.2.0",
-    "mocha": "^5.2.0",
+    "mocha": "^7.1.1",
     "node-mocks-http": "^1.7.3",
-    "sinon": "^7.1.1",
-    "webpack": "^4.17.1",
-    "webpack-command": "^0.4.1"
+    "sinon": "^7.1.1"
   },
   "apidoc": {
     "name": "Node App API",
